--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.singlevendorapp">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,10 +11,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".activities.ProductActivity"
+            android:theme="@style/MaterialActivity" android:label="">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.HomeActivity" />
+        </activity>
+        <activity
+            android:name=".activities.FavoritesActivity"
+            android:theme="@style/MaterialActivity" />
+        <activity
             android:name=".activities.HomeActivity"
             android:theme="@style/MaterialActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -22,9 +34,7 @@
             android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".activities.IntroActivity"
-            android:theme="@style/NoActionBarTheme">
-
-        </activity>
+            android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/NoActionBarTheme" />
