--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
         </activity>
         <activity
             android:name=".activities.FavoritesActivity"
-            android:theme="@style/MaterialActivity" />
+            android:theme="@style/MaterialActivity" android:label="">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.HomeActivity" />
+        </activity>
         <activity
             android:name=".activities.HomeActivity"
             android:theme="@style/MaterialActivity">
