--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.CartActivity"
+            android:label=""
+            android:theme="@style/MaterialActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.HomeActivity" />
+        </activity>
         <activity
             android:name=".activities.ProductActivity"
-            android:theme="@style/MaterialActivity" android:label="">
+            android:label=""
+            android:theme="@style/MaterialActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.HomeActivity" />
         </activity>
         <activity
             android:name=".activities.FavoritesActivity"
-            android:theme="@style/MaterialActivity" android:label="">
+            android:label=""
+            android:theme="@style/MaterialActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.HomeActivity" />
@@ -42,7 +51,6 @@
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/NoActionBarTheme" />
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
